# recipe

./: README.md  alembic.ini  compose.yml  openapi.json  pyproject.toml
migrations/: env.py
migrations/versions/: 5154612a0b9b_base.py
recipe/: main.py
recipe/api/: build.py
recipe/api/middleware/: __init__.py
recipe/api/routes/: recipes.py
recipe/core/: settings.py
recipe/crud/: __init__.py  _base_public.py  crud_recipe.py
recipe/db/: packet.py  session.py
recipe/pyd/: ingredient.py  recipe.py
recipe/schemas/: __init__.py  _base.py  ingredient.py  recipe.py
tests/integration/: test_list_recipe.py  test_recipe.py
tests/unit/: get_recipe_filters.py
