[project]
name = "my-app"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.32.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
exclude = [
    "migrations"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.ruff.lint]
ignore = [
    "RET504", # Unnecessary assignment before return
]
extend-select = [
  "UP",   # pyupgrade
  "FAST", # FastAPI
  "G",    # Logging format
  "RET",  # Return
  "I",    # isort
  "PL",   # Pylint
  "RUF",  # Ruff
]
